@@ -30,7 +30,7 @@ my %WriteMakefileArgs = (
     "Capture::Tiny" => 0,
     "Test::MockModule" => 0,
     "Test::More" => "0.88",
-    "Test::TempDir::Tiny" => "0.017",
+    "Test::TempDir::Tiny" => 0,
     "lib" => 0,
     "subs" => 0
   },
@@ -48,7 +48,7 @@ my %FallbackPrereqs = (
   "File::Spec" => 0,
   "Test::MockModule" => 0,
   "Test::More" => "0.88",
-  "Test::TempDir::Tiny" => "0.017",
+  "Test::TempDir::Tiny" => 0,
   "lib" => 0,
   "strict" => 0,
   "subs" => 0,
