@@ -12,4 +12,3 @@ lib = dzil-inc/lib
 [@Author::SKIRMESS]
 :version = 1.000
 set_script_shebang = 0
-Git::FilePermissions.perms[bin] = ^bin/ 0755
