@@ -70,7 +70,7 @@ allow_in_main_unless_in_subroutine = 1
 [InputOutput::RequireCheckedOpen]
 
 [InputOutput::RequireCheckedSyscalls]
-exclude_functions = print say sleep
+exclude_functions = exec print say sleep
 functions = :builtins
 
 [InputOutput::RequireEncodingWithUTF8Layer]
@@ -111,7 +111,7 @@ modules = Class::ISA {Found use of Class::ISA. This module is deprecated by the 
 [RegularExpressions::RequireLineBoundaryMatching]
 [Subroutines::ProhibitAmpersandSigils]
 [Subroutines::ProhibitBuiltinHomonyms]
-[Subroutines::ProhibitExcessComplexity]
+#[Subroutines::ProhibitExcessComplexity]
 [Subroutines::ProhibitExplicitReturnUndef]
 [Subroutines::ProhibitManyArgs]
 [Subroutines::ProhibitNestedSubs]
@@ -122,7 +122,7 @@ modules = Class::ISA {Found use of Class::ISA. This module is deprecated by the 
 private_name_regex = _(?!build_)\w+
 
 [Subroutines::ProtectPrivateSubs]
-[Subroutines::RequireArgUnpacking]
+#[Subroutines::RequireArgUnpacking]
 [Subroutines::RequireFinalReturn]
 [TestingAndDebugging::ProhibitNoStrict]
 [TestingAndDebugging::ProhibitNoWarnings]
@@ -135,12 +135,12 @@ private_name_regex = _(?!build_)\w+
 [ValuesAndExpressions::ProhibitComplexVersion]
 forbid_use_version = 1
 
-[ValuesAndExpressions::ProhibitConstantPragma]
+#[ValuesAndExpressions::ProhibitConstantPragma]
 [ValuesAndExpressions::ProhibitEmptyQuotes]
 [ValuesAndExpressions::ProhibitEscapedCharacters]
 [ValuesAndExpressions::ProhibitImplicitNewlines]
 [ValuesAndExpressions::ProhibitInterpolationOfLiterals]
-[ValuesAndExpressions::ProhibitLeadingZeros]
+#[ValuesAndExpressions::ProhibitLeadingZeros]
 [ValuesAndExpressions::ProhibitLongChainsOfMethodCalls]
 #[ValuesAndExpressions::ProhibitMagicNumbers]
 [ValuesAndExpressions::ProhibitMismatchedOperators]
@@ -161,10 +161,7 @@ forbid_use_version = 1
 [Variables::ProhibitMatchVars]
 [Variables::ProhibitPackageVars]
 [Variables::ProhibitPerl4PackageNames]
-
-[Variables::ProhibitPunctuationVars]
-allow = $@ $! $/ $0
-
+#[Variables::ProhibitPunctuationVars]
 [Variables::ProhibitReusedNames]
 [Variables::ProhibitUnusedVariables]
 [Variables::ProtectPrivateVars]
@@ -182,29 +179,10 @@ allow = $@ $! $/ $0
 [Bangs::ProhibitDebuggingModules]
 [Bangs::ProhibitFlagComments]
 #[Bangs::ProhibitNoPlan]
-[Bangs::ProhibitNumberedNames]
+#[Bangs::ProhibitNumberedNames]
 [Bangs::ProhibitRefProtoOrProto]
 [Bangs::ProhibitUselessRegexModifiers]
 #[Bangs::ProhibitVagueNames]
-
-# ----------------------------------------------------------
-# Perl::Critic::Moose
-# ----------------------------------------------------------
-
-[Moose::ProhibitDESTROYMethod]
-equivalent_modules = Moo Moo::Role
-
-[Moose::ProhibitLazyBuild]
-equivalent_modules = Moo Moo::Role
-
-[Moose::ProhibitMultipleWiths]
-equivalent_modules = Moo Moo::Role
-
-[Moose::ProhibitNewMethod]
-equivalent_modules = Moo Moo::Role
-
-[Moose::RequireCleanNamespace]
-[Moose::RequireMakeImmutable]
 
 # ----------------------------------------------------------
 # Perl::Critic::Freenode
@@ -234,12 +212,6 @@ equivalent_modules = Moo Moo::Role
 [Freenode::WhileDiamondDefaultAssignment]
 
 # ----------------------------------------------------------
-# Perl::Critic::Policy::HTTPCookies
-# ----------------------------------------------------------
-
-[HTTPCookies]
-
-# ----------------------------------------------------------
 # Perl::Critic::Itch
 # ----------------------------------------------------------
 
@@ -256,6 +228,25 @@ equivalent_modules = Moo Moo::Role
 #[Lax::RequireConstantOnLeftSideOfEquality::ExceptEq]
 #[Lax::RequireEndWithTrueConst]
 #[Lax::RequireExplicitPackage::ExceptForPragmata]
+
+# ----------------------------------------------------------
+# Perl::Critic::Moose
+# ----------------------------------------------------------
+
+[Moose::ProhibitDESTROYMethod]
+equivalent_modules = Moo Moo::Role
+
+[Moose::ProhibitLazyBuild]
+equivalent_modules = Moo Moo::Role
+
+[Moose::ProhibitMultipleWiths]
+equivalent_modules = Moo Moo::Role
+
+[Moose::ProhibitNewMethod]
+equivalent_modules = Moo Moo::Role
+
+[Moose::RequireCleanNamespace]
+[Moose::RequireMakeImmutable]
 
 # ----------------------------------------------------------
 # Perl::Critic::More
@@ -288,16 +279,16 @@ equivalent_modules = Moo Moo::Role
 [BuiltinFunctions::ProhibitReturnOr]
 
 # ----------------------------------------------------------
+# Perl::Critic::Policy::HTTPCookies
+# ----------------------------------------------------------
+
+[HTTPCookies]
+
+# ----------------------------------------------------------
 # Perl::Critic::Policy::Moo::ProhibitMakeImmutable
 # ----------------------------------------------------------
 
 [Moo::ProhibitMakeImmutable]
-
-# ----------------------------------------------------------
-# Perl::Critic::Policy::ValuesAndExpressions::ProhibitSingleArgArraySlice
-# ----------------------------------------------------------
-
-#[ValuesAndExpressions::ProhibitSingleArgArraySlice]
 
 # ----------------------------------------------------------
 # Perl::Critic::Policy::Perlsecret
@@ -322,6 +313,18 @@ equivalent_modules = Moo Moo::Role
 # ----------------------------------------------------------
 
 [ValuesAndExpressions::PreventSQLInjection]
+
+# ----------------------------------------------------------
+# Perl::Critic::Policy::ValuesAndExpressions::ProhibitSingleArgArraySlice
+# ----------------------------------------------------------
+
+[ValuesAndExpressions::ProhibitSingleArgArraySlice]
+
+# ----------------------------------------------------------
+# Perl::Critic::Policy::Variables::ProhibitLoopOnHash
+# ----------------------------------------------------------
+
+[Variables::ProhibitLoopOnHash]
 
 # ----------------------------------------------------------
 # Perl::Critic::Policy::Variables::ProhibitUnusedVarsStricter
