@@ -1,9 +1,5 @@
-[-Bangs::ProhibitNumberedNames]
-
 [ControlStructures::ProhibitPostfixControls]
 flowcontrol = BAIL_OUT skip
 
 [-Modules::ProhibitMultiplePackages]
 [-Modules::RequireExplicitInclusion]
-[-Subroutines::RequireArgUnpacking]
-[-ValuesAndExpressions::ProhibitLeadingZeros]
